<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_huge"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/twofactor_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:gravity="center"
        android:text="@string/twofactor_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/twofactor_field"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="20sp"
        android:autofillHints="smsOTPCode"
        android:hint="@string/twofactor_field_filler"
        android:inputType="textCapCharacters"
        android:minHeight="48sp"
        android:paddingHorizontal="30dp"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twofactor_text"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/twofactor_continue_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:paddingVertical="20sp"
        android:layout_marginHorizontal="30sp"
        android:text="@string/twofactor_continue_button"
        app:layout_constraintTop_toBottomOf="@+id/twofactor_field"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>